JumpScript/tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause6.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ExtendsOrImplementsClauses/parserErrorRecovery_ExtendsOrImplementsClause6.jump(1,20): error TS1097: 'extends' list cannot be empty.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ExtendsOrImplementsClauses/parserErrorRecovery_ExtendsOrImplementsClause6.jump (1 errors) ====
    interface I extends { }
                       
!!! error TS1097: 'extends' list cannot be empty.